# kScaNN_optimizatoin

./: .gitignore  .gitmodules  README.md
kscann/: CMakeLists.txt  README.md  config.h.in
kscann/converters/: convert_hdf5_to_bin.py  convert_mnist_to_fvecs.py
kscann/examples/: CMakeLists.txt  simple_search.cpp
kscann/include/kscann/: ivf_index.h  kmeans.h  kscann.h  product_quantizer.h  rair_utils.h  simd_avx2.h  simd_utils.h  types.h
kscann/src/: CMakeLists.txt  ivf_index.cpp  kmeans.cpp  kscann.cpp  product_quantizer.cpp  rair_utils.cpp  simd_avx2.cpp.bak  simd_neon.cpp  simd_utils.cpp
kscann/tests/: CMakeLists.txt  bench_gist.cpp  bench_glove.cpp  bench_mnist.cpp  test_ivf_pq.cpp
